myholyback-v2/src/test/java/com/syntaxerror/biblioteca/util/CorreoUtilTest.java
///*
// * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
// * Click nbfs://nbhost/SystemFileSystem/Templates/UnitTests/JUnit5TestClass.java to edit this template
// */
//package com.syntaxerror.biblioteca.util;
//
//import org.junit.jupiter.api.AfterEach;
//import org.junit.jupiter.api.AfterAll;
//import org.junit.jupiter.api.BeforeEach;
//import org.junit.jupiter.api.BeforeAll;
//import org.junit.jupiter.api.Test;
//import static org.junit.jupiter.api.Assertions.*;
//
///**
// *
// * @author Fabian
// */
//public class CorreoUtilTest {
//
//    public CorreoUtilTest() {
//    }
//
//    @BeforeAll
//    public static void setUpClass() {
//    }
//
//    @AfterAll
//    public static void tearDownClass() {
//    }
//
//    @BeforeEach
//    public void setUp() {
//    }
//
//    @AfterEach
//    public void tearDown() {
//    }
//
//    /**
//     * Test of enviarCorreo method, of class CorreoUtil.
//     */
//    @Test
//    public void testEnviarCorreo() throws Exception {
//        try {
//            CorreoUtil.enviarCorreo(
//                    "fzapataarburua@gmail.com",
//                    "📚 Prueba de envío de correo",
//                    "<h1>Hola!</h1><p>Este es un correo de prueba de MyHolyLib.</p>"
//            );
//            System.out.println("✅ Correo enviado con éxito");
//        } catch (Exception e) {
//            e.printStackTrace();
//        }
//    }
//
//}
